Removing Jsoup dependencies and moving to default jdk document.