@@ -1,24 +1,17 @@
 package br.readable.extractor;
 
+import java.net.URI;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.apache.commons.lang3.StringUtils;
-import org.jsoup.nodes.Attribute;
-import org.jsoup.nodes.Attributes;
-import org.jsoup.nodes.Comment;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
-import org.jsoup.nodes.Node;
-import org.jsoup.nodes.FastNodeUtils;
-import org.jsoup.nodes.TextNode;
-import org.jsoup.select.Elements;
-import org.jsoup.select.NodeVisitor;
 
-/**
- * Created by andre on 8/10/14.
- */
+import org.w3c.dom.*;
+import org.w3c.dom.traversal.DocumentTraversal;
+import org.w3c.dom.traversal.NodeFilter;
+import org.w3c.dom.traversal.TreeWalker;
+
 public class ReadableContentExtractor {
 
     private Document doc;
@@ -26,7 +19,7 @@ public class ReadableContentExtractor {
     private boolean imageBeforeText = false;
 
     private Matcher contentPattern = Pattern.compile("post|entry|content|text|body|article|story", Pattern.CASE_INSENSITIVE).matcher("");
-    private Matcher stopwordPattern = Pattern.compile("comm?ents?|komm?ents?|share|footer|^ad|footnote|breadcrumb|menu|pub", Pattern.CASE_INSENSITIVE).matcher("");
+    private Matcher stopwordPattern = Pattern.compile("comm?ents?|komm?ents?|share|footer|^ad|footnote|skip|breadcrumb|menu|continue|pub", Pattern.CASE_INSENSITIVE).matcher("");
     private Matcher allowedAttrPattern = Pattern.compile("src|data-src|href|text", Pattern.CASE_INSENSITIVE).matcher("");
     private Matcher sphereitPattern = Pattern.compile("sphereit", Pattern.CASE_INSENSITIVE).matcher("");
     private Matcher imageSizePattern = Pattern.compile("(\\d+).*").matcher("");
@@ -51,8 +44,8 @@ public class ReadableContentExtractor {
 
         // Grabbing article title
         String title = getTitle();
-        articleTitle.attr("class", "title");
-        articleTitle.html(title);
+        articleTitle.setAttribute("class", "title");
+        articleTitle.setTextContent(title);
 
         // Grabbing main description
         String description = getDescription();
@@ -66,16 +59,16 @@ public class ReadableContentExtractor {
         articleContent.appendChild(articleTitle);
         if (description != null) {
             Element articleDescription = this.doc.createElement("p");
-            articleDescription.attr("class", "intro");
-            articleDescription.text(description);
+            articleDescription.setAttribute("class", "intro");
+            articleDescription.setTextContent(description);
             articleContent.appendChild(articleDescription);
         }
 
-        if (imageURL != null && mainContent.select("figure").isEmpty() && !imageBeforeText) {
+        if (imageURL != null && this.mainContent.getElementsByTagName("figure").getLength() == 0 && !imageBeforeText) {
             Element articleImageWrapper = this.doc.createElement("div");
-            articleImageWrapper.attr("id", "mainImage");
+            articleImageWrapper.setAttribute("id", "mainImage");
             Element articleImage = this.doc.createElement("img");
-            articleImage.attr("src", imageURL);
+            articleImage.setAttribute("src", imageURL);
             articleImageWrapper.appendChild(articleImage);
             articleContent.appendChild(articleImageWrapper);
         }
@@ -87,14 +80,18 @@ public class ReadableContentExtractor {
     public String getTitle() {
         // Check on meta OG information at first
         String title = null;
-        List<Element> metaElements = this.doc.getElementsByTag("meta");
-        for (Element meta : metaElements) {
-            if (meta.attr("property").equals("og:title"))
-                title = meta.attr("content");
+        NodeList metaElements = this.doc.getElementsByTagName("meta");
+        for (int i = 0; i < metaElements.getLength(); i++) {
+            Element meta = (Element) metaElements.item(i);
+            if (meta.getAttribute("property").equals("og:title"))
+                title = meta.getAttribute("content");
         }
 
-        if (title == null || title.isEmpty())
-            title = this.doc.title();
+        if (title == null || title.isEmpty()) {
+            NodeList titleEls = this.doc.getElementsByTagName("title");
+            if (titleEls.getLength() > 0)
+                title = titleEls.item(0).getNodeValue();
+        }
 
         return title;
     }
@@ -109,7 +106,11 @@ public class ReadableContentExtractor {
 
     public Element getMainContent(String title, String description) {
         // Scoring elements
-        Element body = this.doc.body();
+        NodeList nodelist = this.doc.getElementsByTagName("body");
+        if (nodelist.getLength() == 0)
+            return null;
+
+        Element body = (Element) nodelist.item(0);
         Element topDiv = null;
 
         if (body != null) {
@@ -117,13 +118,17 @@ public class ReadableContentExtractor {
 
             // Selecting all paragraphs
             Set<Node> allParagraphs = new HashSet<>();
-            allParagraphs.addAll(body.getElementsByTag("p"));
+            NodeList paragraphsList = body.getElementsByTagName("p");
+            for (int i = 0; i < paragraphsList.getLength(); i++) {
+                allParagraphs.add(paragraphsList.item(i));
+            }
 
             // Selecting text enclosed by div's and not p's
-            Elements elements = body.getElementsByTag("div");
-            for (Element element : elements){
-                for (TextNode node : element.textNodes()) {
-                    if (!node.isBlank()) {
+            NodeList metaElements = body.getElementsByTagName("div");
+            for (int i = 0; i < metaElements.getLength(); i++) {
+                Element element = (Element) metaElements.item(i);
+                for (Text node : findTextNodes(element)) {
+                    if (!node.isElementContentWhitespace() && !node.getTextContent().trim().isEmpty()) {
                         allParagraphs.add(node);
                         break;
                     }
@@ -143,7 +148,7 @@ public class ReadableContentExtractor {
 
         if (topDiv == null) {
             topDiv = this.doc.createElement("p");
-            topDiv.text("Could not extract readable content from this page.");
+            topDiv.setTextContent("Could not extract readable content from this page.");
             return topDiv;
         }
 
@@ -169,27 +174,34 @@ public class ReadableContentExtractor {
         cleanIrrelevantImages(topDiv);
         cleanIrrelevantAttributes(topDiv);
 
+        topDiv.normalize();
+
         // Remove title from the text (duplicates may exists inside article div)
         if (title != null) {
-            List<Element> duplicateTitleCandidates = topDiv.select("h1, h2, h3");
-            for (Element duplicateCandidate : duplicateTitleCandidates) {
-                if (title.equals(duplicateCandidate.ownText()))
-                    duplicateCandidate.remove();
+            String[] hlist = {"h1", "h2", "h3"};
+            for (String hx : hlist) {
+                NodeList duplicateCandidates = topDiv.getElementsByTagName(hx);
+                for (int i = 0; i < duplicateCandidates.getLength(); i++) {
+                    Element duplicateCandidate = (Element) duplicateCandidates.item(i);
+                    if (title.equals(getFirstLevelTextContent(duplicateCandidate)))
+                        duplicateCandidate.getParentNode().removeChild(duplicateCandidate);
+                }
             }
         }
 
         // Remove description from the text (duplicates may exists inside article div)
         if (description != null) {
             Element duplicateCandidate = null;
-            Elements duplicateCandidates = topDiv.select("p");
-            for (Element el : duplicateCandidates) {
+            NodeList duplicateCandidates = topDiv.getElementsByTagName("p");
+            for (int i = 0; i < duplicateCandidates.getLength(); i++) {
+                Element el = (Element) duplicateCandidates.item(i);
                 if (!hasVisibleChar(el, true)) {
                     duplicateCandidate = el;
                     break;
                 }
             }
-            if (duplicateCandidate != null && description.equals(duplicateCandidate.ownText()))
-                duplicateCandidate.remove();
+            if (duplicateCandidate != null && description.equals(getFirstLevelTextContent(duplicateCandidate)))
+                duplicateCandidate.getParentNode().removeChild(duplicateCandidate);
         }
 
         return topDiv;
@@ -197,12 +209,13 @@ public class ReadableContentExtractor {
 
     public String getDescription() {
         // Check on meta OG information as fallback solution
-        List<Element> metaElements = this.doc.getElementsByTag("meta");
-        for (Element element : metaElements) {
-            if (element.attr("property").equals("og:description"))
-                return element.attr("content");
-            if (element.attr("name").equals("description"))
-                return element.attr("content");
+        NodeList metaElements = this.doc.getElementsByTagName("meta");
+        for (int i = 0; i < metaElements.getLength(); i++) {
+            Element element = (Element) metaElements.item(i);
+            if (element.getAttribute("property").equals("og:description"))
+                return element.getAttribute("content");
+            if (element.getAttribute("name").equals("description"))
+                return element.getAttribute("content");
         }
 
         return null;
@@ -210,15 +223,20 @@ public class ReadableContentExtractor {
 
     public Set<String> getMainImages(Integer number) {
 
+        // Create base URI
+        URI base = URI.create(this.doc.getBaseURI());
+
         if (number != null && number < 1)
             throw new IllegalArgumentException("Number of images need to be bigger or equal to 1.");
 
-        Set<String> result = new LinkedHashSet<String>();
+        Set<String> result = new LinkedHashSet<>();
         if(mainContent == null) mainContent = this.getMainContent();
 
-        for(Element image: mainContent.getElementsByTag("img")){
-            if(image.hasAttr("src")){
-                result.add(image.attr("abs:src"));
+        NodeList metaElements = mainContent.getElementsByTagName("img");
+        for (int i = 0; i < metaElements.getLength(); i++) {
+            Element element = (Element) metaElements.item(i);
+            if(element.getAttribute("src") != null){
+                result.add(base.resolve(element.getAttribute("src")).toString());
                 if(number != null && result.size() == number) break;
             }
         }
@@ -229,10 +247,11 @@ public class ReadableContentExtractor {
     protected String getMainImage() {
         // Check on meta OG information at first
         String imageURL = null;
-        List<Element> metaElements = this.doc.getElementsByTag("meta");
-        for (Element element : metaElements) {
-            if (element.attr("property").equals("og:image"))
-                imageURL = element.attr("content");
+        NodeList metaElements = this.doc.getElementsByTagName("meta");
+        for (int i = 0; i < metaElements.getLength(); i++) {
+            Element element = (Element) metaElements.item(i);
+            if (element.getAttribute("property").equals("og:image"))
+                imageURL = element.getAttribute("content");
         }
 
         // If first element is also an image, drop the image from the OG
@@ -247,12 +266,12 @@ public class ReadableContentExtractor {
 
         // Fetching element readability score
         for (Node node : nodes) {
-            Node parent = node.parent();
+            Node parent = node.getParentNode();
             if (!(parent instanceof Element))
                 continue;
 
             Element parentEl = (Element) parent;
-            if (!parentEl.tagName().equalsIgnoreCase("div") && !parentEl.tagName().equalsIgnoreCase("article"))
+            if (!parentEl.getTagName().equalsIgnoreCase("div") && !parentEl.getTagName().equalsIgnoreCase("article"))
                 continue;
 
             Integer score = readabilityScoreMap.get(parentEl);
@@ -262,21 +281,20 @@ public class ReadableContentExtractor {
             if (textLength(node) > 30)
                 score += Math.max(30, textLength(node) / 5);
 
-            if(node instanceof Element) score += (StringUtils.countMatches(((Element)node).text(), ","));
-            if(node instanceof TextNode) score += (StringUtils.countMatches(((TextNode)node).text(), ","));
+            score += (StringUtils.countMatches(node.getTextContent(), ","));
             if (score >= 0) readabilityScoreMap.put(parentEl, score);
         }
 
         // Consider also the grandparent level
         for (Node node : nodes) {
-            Node parent = node.parent();
-            Node grandPa = node.parent().parent();
+            Node parent = node.getParentNode();
+            Node grandPa = parent.getParentNode();
             if (grandPa == null || !(parent instanceof Element) || !(grandPa instanceof Element))
                 continue;
 
             Element parentEl = (Element) parent;
             Element grandPaEl = (Element) grandPa;
-            if (!parentEl.tagName().equals("div") || (!grandPaEl.tagName().equals("div")))
+            if (!parentEl.getTagName().equals("div") || (!grandPaEl.getTagName().equals("div")))
                 continue;
 
             Integer score = readabilityScoreMap.get(grandPaEl);
@@ -286,8 +304,7 @@ public class ReadableContentExtractor {
             if (textLength(node) > 30)
                 score += Math.max(20, textLength(node) / 10);
 
-            if(node instanceof Element) score += (StringUtils.countMatches(((Element)node).text(), ",") / 2);
-            if(node instanceof TextNode) score += (StringUtils.countMatches(((TextNode)node).text(), ",") / 2);
+            score += (StringUtils.countMatches(node.getTextContent(), ",") / 2);
             if (score >= 0) readabilityScoreMap.put(grandPaEl, score);
         }
 
@@ -296,17 +313,17 @@ public class ReadableContentExtractor {
     
     protected Integer scoreByMatchClassId(Element e) {
         Integer result = 0;
-        if (contentPattern.reset(e.classNames().toString()).find())
+        if (contentPattern.reset(e.getAttribute("class")).find())
             result += 100;
-        else if (stopwordPattern.reset(e.classNames().toString()).find())
+        else if (stopwordPattern.reset(e.getAttribute("class")).find())
             result -= 999;
 
-        if (contentPattern.reset(e.id()).find())
+        if (contentPattern.reset(e.getAttribute("id")).find())
             result += 100;
-        else if (stopwordPattern.reset(e.id()).find())
+        else if (stopwordPattern.reset(e.getAttribute("id")).find())
             result -= 999;
 
-        String itemprop = e.attr("itemprop");
+        String itemprop = e.getAttribute("itemprop");
         if (itemprop != null && !itemprop.isEmpty()) {
             if (contentPattern.reset(itemprop).find())
                 result += 100;
@@ -319,13 +336,17 @@ public class ReadableContentExtractor {
 
     protected void killBrWrapPattern(Element e) {
 
-        List<Node> children = new ArrayList<Node>(e.childNodes());
+        List<Node> children = new ArrayList<>();
+        NodeList childList = e.getChildNodes();
+        for (int i = 0; i < childList.getLength(); i++) {
+            children.add(childList.item(i));
+        }
 
         boolean hasBr = false;
         for (Node child: children){
             if(child instanceof Element){
                 Element element = (Element) child;
-                if("br".equals(element.tagName())) hasBr = true;
+                if("br".equals(element.getTagName())) hasBr = true;
                 else
                     killBrWrapPattern(element);
             }
@@ -333,39 +354,43 @@ public class ReadableContentExtractor {
 
         if(!hasBr) return;
 
-        FastNodeUtils.removeChildren(e);
+        removeChildren(e);
         Element p = null;
 
         for(Node child: children){
-            if(child instanceof Element && "br".equals(((Element)child).tagName())){
+            if(child instanceof Element && "br".equals(((Element)child).getTagName())){
                 p = null;
                 continue;
             }
 
-            if(p == null) p = e.appendElement("p");
+            if(p == null) p = (Element) e.appendChild(this.doc.createElement("p"));
             p.appendChild(child);
         }
     }
 
     protected boolean killCodeSpansAndBreaks(Element e) {
 
-        List<Node> children = new ArrayList<Node>(e.childNodes());
+        List<Node> children = new ArrayList<>();
+        NodeList childList = e.getChildNodes();
+        for (int i = 0; i < childList.getLength(); i++) {
+            children.add(childList.item(i));
+        }
+
         TextAppender appender = new TextAppender();
 
         boolean hasChild = false;
 
-        FastNodeUtils.removeChildren(e);
+        removeChildren(e);
 
         for(Node child: children){
 
             if(child instanceof Element){
 
                 Element element = (Element) child;
-                String name = element.tagName();
+                String name = element.getTagName();
 
-                if("br".equals(name) || "span".equals(name)){
+                if("br".equals(name) || "span".equals(name))
                     continue;
-                };
 
                 boolean hasGChild = killCodeSpansAndBreaks(element);
 
@@ -374,37 +399,38 @@ public class ReadableContentExtractor {
                     continue;
                 }
 
-                e.appendText(appender.toString());
+                e.appendChild(this.doc.createTextNode(appender.toString()));
                 appender.reset();
                 e.appendChild(element);
-                hasChild = true;
+                hasChild = child.hasChildNodes();
 
-            }else if(child instanceof TextNode){
-                appender.append(((TextNode)child).getWholeText());
+            }else if(child instanceof Text){
+                appender.append(((Text)child).getWholeText());
             }
         }
 
         hasChild |= appender.hasVisibleChar;
         String text = appender.toString();
-        if(text.length() > 0) e.appendText(text);
+        if(text.length() > 0) e.appendChild(this.doc.createTextNode(appender.toString()));
 
         return hasChild;
     }
 
     protected void killDivs (Element e) {
-        Elements divsList = e.getElementsByTag( "div" );
+        NodeList divsList = e.getElementsByTagName("div");
 
         // Gather counts for other typical elements embedded within.
         // Traverse backwards so we can remove nodes at the same time without effecting the traversal.
-        for (Element div : divsList) {
-            int pCount = div.getElementsByTag("p").size();
-            int imgCount = div.getElementsByTag("img").size();
-            int liCount = div.getElementsByTag("li").size();
-            int aCount = div.getElementsByTag("a").size();
-            int embedCount = div.getElementsByTag("embed").size();
-            int objectCount = div.getElementsByTag("object").size();
-            int preCount = div.getElementsByTag("pre").size();
-            int codeCount = div.getElementsByTag("code").size();
+        for (int i = 0; i < divsList.getLength(); i++) {
+            Element div = (Element) divsList.item(i);
+            int pCount = div.getElementsByTagName("p").getLength();
+            int imgCount = div.getElementsByTagName("img").getLength();
+            int liCount = div.getElementsByTagName("li").getLength();
+            int aCount = div.getElementsByTagName("a").getLength();
+            int embedCount = div.getElementsByTagName("embed").getLength();
+            int objectCount = div.getElementsByTagName("object").getLength();
+            int preCount = div.getElementsByTagName("pre").getLength();
+            int codeCount = div.getElementsByTagName("code").getLength();
 
             int sphereit = findComment(div, sphereitPattern) ? 0 : 1;
 
@@ -415,57 +441,61 @@ public class ReadableContentExtractor {
                 if (( imgCount > pCount || liCount > pCount || aCount > pCount || pCount == 0)
                         && ( preCount == 0 && codeCount == 0 && embedCount == 0 && objectCount == 0 && sphereit == 0 )) {
                     if (pCount != 0 && imgCount == 1)
-                        div.remove();
+                        div.getParentNode().removeChild(div);
                 }
             }
 
-            String divId = div.id();
-            String divClasses = StringUtils.join(div.classNames(), " ");
+            String divId = div.getAttribute("id");
+            String divClasses = StringUtils.join(div.getAttribute("id"), " ");
 
             // Removing elements by stopwords
             if (stopwordPattern.reset(divId).find() || stopwordPattern.reset(divClasses).find())
-                div.remove();
+                div.getParentNode().removeChild(div);
         }
     }
 
     protected void cleanIrrelevantAttributes(Element root) {
 
-        root.traverse(new NodeVisitor() {
+        DocumentTraversal traversal = (DocumentTraversal) doc;
 
-            boolean foundParagraph = false;
+        TreeWalker walker = traversal.createTreeWalker(root,
+                NodeFilter.SHOW_ELEMENT,
+                null,
+                false);
 
-            @Override
-            public void head(Node node, int i) {
-                if (node instanceof  Element) {
-                    Element el = ((Element) node);
-                    String tagName = el.tagName();
-                    if (tagName.equals("p") && (el.ownText().length() > 20))
-                        foundParagraph = true;
-                    else if (tagName.equals("img") && !foundParagraph)
-                        imageBeforeText = true;
-                }
+        boolean foundParagraph = false;
+        Node node = walker.nextNode();
+        while (node != null) {
+            Element el = ((Element) node);
+            String tagName = el.getTagName();
+            if (tagName.equals("p") && (getFirstLevelTextContent(el).length() > 20))
+                foundParagraph = true;
+            else if (tagName.equals("img") && !foundParagraph)
+                imageBeforeText = true;
+
+
+            NamedNodeMap attributes = el.getAttributes();
+            for (int j = 0; j < attributes.getLength(); j++) {
+                Attr attribute = (Attr) attributes.item(j);
+                if (!allowedAttrPattern.reset(attribute.getName()).find() ||
+                        (attribute.getName().matches("(?i:href)") && attribute.getValue().startsWith("javascript:")))
+                    node.getAttributes().removeNamedItem(attribute.getName());
             }
 
-            @Override
-            public void tail(Node node, int i) {
-                Attributes attributes = node.attributes();
-                for (Attribute attribute : attributes) {
-                    String key = attribute.getKey();
-                    String value = attribute.getValue();
-                    if (!allowedAttrPattern.reset(key).find() ||
-                            (key.matches("(?i:href)") && value.startsWith("javascript:")))
-                        node.attributes().remove(key);
-                }
-            }
-        });
+            node = walker.nextNode();
+        }
     }
 
     protected void cleanIrrelevantImages(Element root) {
+        // Create base URI
+        URI base = URI.create(this.doc.getBaseURI());
+
         // Removing irrelevant images
-        List<Element> images = root.getElementsByTag("img");
-        for (Element image : images) {
-            String heightStr = image.attr("height");
-            String widthStr = image.attr("width");
+        NodeList images = root.getElementsByTagName("img");
+        for (int i = 0; i < images.getLength(); i++) {
+            Element image = (Element) images.item(i);
+            String heightStr = image.getAttribute("height");
+            String widthStr = image.getAttribute("width");
             Integer width = null;
             Integer height = null;
             if (widthStr != null && !widthStr.isEmpty()) {
@@ -479,20 +509,20 @@ public class ReadableContentExtractor {
             }
 
             if ((width != null && width < 70) || (height != null && height < 70)) {
-                image.remove();
+                image.getParentNode().removeChild(image);
                 continue;
             }
 
             // Remove "data-src" attr, if exists
-            String copy = image.attr("data-src");
+            String copy = image.getAttribute("data-src");
             if (copy != null && !copy.isEmpty()) {
-                image.attr("src", copy);
-                image.removeAttr("data-src");
+                image.setAttribute("src", copy);
+                image.removeAttribute("data-src");
             }
 
             // Set absolute path for all images
-            String absolute = image.absUrl("src");
-            image.attr("src", absolute);
+            String absolute = image.getAttribute("src");
+            image.setAttribute("src", base.resolve(absolute).toString());
         }
     }
 
@@ -501,34 +531,38 @@ public class ReadableContentExtractor {
     }
 
     protected void clean(Element e, String tagName, Integer minWords) {
-        Elements targetList;
+        NodeList targetList;
 
         if (tagName.equalsIgnoreCase("table")) {
-            targetList = e.getElementsByTag(tagName);
-            for (Element target : targetList) {
-                // If the text content isn't laden with words, remove the child:
-                int cells = target.getElementsByTag("td").size();
+            targetList = e.getElementsByTagName(tagName);
+            for (int i = 0; i < targetList.getLength(); i++) {
+                // If the content isn't laden with words, remove the child:
+                Element target = (Element) targetList.item(i);
+                int cells = target.getElementsByTagName("td").getLength();
                 if (cells < minWords)
-                    target.remove();
+                    target.getParentNode().removeChild(target);
             }
         } else {
-            targetList = e.getElementsByTag(tagName);
+            targetList = e.getElementsByTagName(tagName);
 
-            for (Element target : targetList) {
+            for (int i = 0; i < targetList.getLength(); i++) {
+                Element target = (Element) targetList.item(i);
                 int length = textLength(target);
-                if ((length < minWords) && !target.tagName().equalsIgnoreCase("pre"))
-                    target.remove();
+                if ((length < minWords) && !target.getTagName().equalsIgnoreCase("pre"))
+                    target.getParentNode().removeChild(target);
             }
         }
     }
 
     protected boolean hasVisibleChar(Node node, boolean checkOnlyChildren){
 
-        for(Node child: node.childNodes()) {
-            if (child instanceof TextNode) {
-                String text = ((TextNode)child).getWholeText();
-                for(int i = 0; i < text.length(); i++){
-                    char c = text.charAt(i);
+        NodeList children = node.getChildNodes();
+        for (int i = 0; i < children.getLength(); i++) {
+            Node child = children.item(i);
+            if (child instanceof Text) {
+                String text = ((Text)child).getWholeText();
+                for(int j = 0; j < text.length(); j++){
+                    char c = text.charAt(j);
                     if(!Character.isWhitespace(c) && c != 160) return true;
                 }
             }else if(child instanceof Element && !checkOnlyChildren){
@@ -540,36 +574,73 @@ public class ReadableContentExtractor {
 
     protected int textLength(Node node){
         int length = 0;
-        for(Node child: node.childNodes()){
-            if(child instanceof Element) length += textLength(child);
-            if(child instanceof TextNode) length += ((TextNode)child).getWholeText().length();
+        NodeList children = node.getChildNodes();
+        for (int i = 0; i < children.getLength(); i++) {
+            Node child = children.item(i);
+            if(child instanceof Element || child instanceof Text) length += textLength(child);
         }
         return length;
+    }
+
+    public static String getFirstLevelTextContent(Node node) {
+        NodeList list = node.getChildNodes();
+        StringBuilder textContent = new StringBuilder();
+        for (int i = 0; i < list.getLength(); ++i) {
+            Node child = list.item(i);
+            if (child.getNodeType() == Node.TEXT_NODE)
+                textContent.append(child.getTextContent());
+        }
+        return textContent.toString();
     }
 
     protected int countMatches(Node node, CharSequence pat){
 
         int count = 0;
-        for(Node child: node.childNodes()){
+        NodeList children = node.getChildNodes();
+        for (int i = 0; i < children.getLength(); i++) {
+            Node child = children.item(i);
             if(child instanceof Element) count += countMatches(child, pat);
-            if(child instanceof TextNode){
-                count += StringUtils.countMatches(((TextNode)child).getWholeText(), pat);
-            }
+            if(child instanceof Text) count += StringUtils.countMatches(((Text)child).getWholeText(), pat);
         }
         return count;
     }
 
     protected boolean findComment(Node node, Matcher matcher){
 
-        for(Node cnode: node.childNodes()){
+        NodeList children = node.getChildNodes();
+        for (int i = 0; i < children.getLength(); i++) {
+            Node cnode = children.item(i);
             boolean match = false;
             if(cnode instanceof Element) match = findComment(cnode, matcher);
-            if(cnode instanceof Comment){
-                match = matcher.reset(((Comment)cnode).getData()).find();
-            }
+            if(cnode instanceof Comment) match = matcher.reset(((Comment)cnode).getData()).find();
             if(match) return  true;
         }
         return false;
+    }
+
+    protected List<Text> findTextNodes(Node node){
+        List<Text> nodes = new ArrayList<>();
+        findTextNodesHelper(node, nodes);
+
+        return nodes;
+    }
+
+    protected void findTextNodesHelper(Node node, List<Text> nodes){
+
+        NodeList children = node.getChildNodes();
+        for (int i = 0; i < children.getLength(); i++) {
+            Node cnode = children.item(i);
+            if(cnode instanceof Element) findTextNodesHelper(cnode, nodes);
+            if(cnode instanceof Text) nodes.add((Text)cnode);
+        }
+    }
+
+    protected static void removeChildren(Node node){
+        NodeList children = node.getChildNodes();
+        for (int i = 0; i < children.getLength(); i++) {
+            Node cnode = children.item(i);
+            node.removeChild(cnode);
+        }
     }
 
     private static class TextAppender {
